# ChangeLog for app-text/multitail
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/multitail/ChangeLog,v 1.93 2013/01/14 07:12:27 jlec Exp $

*multitail-5.2.11 (14 Jan 2013)

  14 Jan 2013; Justin Lecher <jlec@gentoo.org> +multitail-5.2.11.ebuild,
  metadata.xml:
  Version Bump, moved to EAPI=5

*multitail-5.2.10 (25 Nov 2012)

  25 Nov 2012; Justin Lecher <jlec@gentoo.org> +multitail-5.2.10.ebuild:
  Version Bump

  28 Feb 2012; Justin Lecher <jlec@gentoo.org> -multitail-5.2.6.ebuild,
  -multitail-5.2.7.ebuild, -multitail-5.2.8.ebuild:
  Cleaned old

  28 Feb 2012; Brent Baude <ranger@gentoo.org> multitail-5.2.9.ebuild:
  Marking multitail-5.2.9 ppc for bug 401093

  07 Feb 2012; Jeroen Roovers <jer@gentoo.org> multitail-5.2.9.ebuild:
  Stable for HPPA (bug #401093).

  28 Jan 2012; Raúl Porcel <armin76@gentoo.org> multitail-5.2.9.ebuild:
  ia64/sparc/x86 stable wrt #401093

  28 Jan 2012; Agostino Sarubbo <ago@gentoo.org> multitail-5.2.9.ebuild:
  Stable for amd64, wrt bug #401093

*multitail-5.2.9 (31 Dec 2011)

  31 Dec 2011; Tim Harder <radhermit@gentoo.org> +multitail-5.2.9.ebuild:
  Version bump. Update to EAPI 4.

  25 Aug 2011; Jeroen Roovers <jer@gentoo.org> multitail-5.2.8.ebuild:
  Stable for HPPA (bug #352986).

  09 Jul 2011; Raúl Porcel <armin76@gentoo.org> multitail-5.2.8.ebuild:
  ia64/sparc stable wrt #352986

  29 Jun 2011; Markus Meier <maekke@gentoo.org> multitail-5.2.8.ebuild:
  amd64/x86 stable, bug #352986

*multitail-5.2.8 (15 Apr 2011)

  15 Apr 2011; Justin Lecher <jlec@gentoo.org> +multitail-5.2.8.ebuild:
  Version Bump

  27 Mar 2011; Jeremy Olexa <darkside@gentoo.org> -multitail-5.2.2.ebuild,
  -multitail-5.2.2-r1.ebuild, -multitail-5.2.6-r1.ebuild:
  remove old ebuilds

  29 Jan 2011; Raúl Porcel <armin76@gentoo.org> multitail-5.2.6.ebuild:
  ia64/sparc stable wrt #350735

  21 Jan 2011; Jeroen Roovers <jer@gentoo.org> multitail-5.2.6.ebuild: