@@ -5,16 +5,18 @@ AUX 5.2.2-as-needed.patch 1193 SHA256 79e19c630837acf6d6b1e1c8fc0528584d4f52b88c
 AUX 5.2.6-buffer-overflow.patch 361 SHA256 6c4cec018a91fbb83176a6e38ee3f88849e168c0e2fc045e19ca51eba147b145 SHA512 f23e8ecf409568dc085dea334cf38efbc9e021553f0615ba5d484d4c63a861a1254a3bca56101b7f3ffdd47f09aed2f13f82dae34c5d11f81b254643828bcc9e WHIRLPOOL 36b9fce8b50a208b92b16f959846736f3b0452df50ef1aa4eafebb5f4850cbb125cdcf09625f4e4c085f6640c04be4e84787f38d44e0e0c92eea0481f820fc64
 DIST multitail-5.2.10.tgz 165812 SHA256 947577050ea907da11b2a86d4716a3309559a33327b2e1342a02b24a38a15c57 SHA512 7c3bd022b89328687b0e2cd96344ef7376e3af993993d26f0936919e3c8fd2145ea2bcc234b6e38335f2373938673d5fb80c3f8d92f4c5478f118c68256fffa2 WHIRLPOOL d2cc0c29797b9b1b8cf444516a28b701ae1f036f81e9bf0ef9b14808ba37828a8666c8c885b8f894f2d3abe6b3f39ba5e23296b41f69bfd25114e91b9d49efac
 DIST multitail-5.2.11.tgz 163769 SHA256 2f0fe12b974adb82b24c8fde98b8ed582535c758493ac8200c1a46449359c2e5 SHA512 ed4fe1aab1cff1b4cb80551d166e53982490208b7830b78bc733a75c4d2afd3b7fa547ad811147fd9e6450431e6477fe0c8c7f8797730a87b35add63b097548b WHIRLPOOL 4ee6a4a69f67ce01b453b85146ec589f31ec8ddb9b89ae81d944d0800041278f378d03d744c4d45c2976d6da1fae1b47da3a4918ab06053e2bce6414a19f6dcb
+DIST multitail-5.2.12.tgz 163735 SHA256 681d87cd49e11aab1d82ad7818ee639c88a3d305db8accf0859977beda6c493c SHA512 d2ce9c119b619857c22dde098f3013fe8d9c8a410f1f6cc56e97cc2bf3fc19eddeff1485019be16587791f44b0b680431087c9e9be66ecc1c999ea0507b6b99c WHIRLPOOL 73ed263561b066f871aa2193a408f5c22f99261fbf08f7c83f020fc1e2799f67884dd5519cd8adcea07d45ae7a4a98b9d49402f6d14ab54ac9bf78c403c54039
 DIST multitail-5.2.9.tgz 165013 SHA256 b90c65e061d4fe5a8c36dd478d3e618eba42ae4abb5570dde063e9d66e9397f3 SHA512 0d643e499f04f9497cc3a9e82de10fe0f6d6f7f69eb3e200c409c0b7815548516a2aba77912d3961db689673b78afc46f78b062029522c3836d4732231d8b7be WHIRLPOOL 385add81418a7d9b1dd3b5db27334dffcb75931934908600a9c723afec79bec63ff3f8a577def59972c457683542ddb60ee4449e43cadfb3b05713b05c6a5a10
 EBUILD multitail-5.2.10.ebuild 1199 SHA256 08add1c50c035fa837821edcba2b2467ae4630dc6e0c0ce4f29edf7c05203666 SHA512 122a45bf962c2d3d221685bee6801f925a46d6c4682bc54190d6f45268c1cf720427379f1ffc6e8424db6ea72cc2a751835b8ba13e52931a973aa2c7bc97443c WHIRLPOOL 8d87f4137e9c7895e715911c42e5bca249fe9b08f5d1f47cc7fab3189f9245621136bcedd85e81667261579482eeaff73106662f29329a72883932e677cb3455
 EBUILD multitail-5.2.11.ebuild 1172 SHA256 8c928f2442103d24f068de0a617fc4f6c6cbc6de3dc0c594e0c9496f9c3380d4 SHA512 f089f5f23370bb7d676d68fa54b4df25e6e07c44675bd762cd49f23e119e745b1f4604436e19fb776ae388f19aa6800c9a0b9193fccb1b0b6835951eff34125d WHIRLPOOL 7a6e4b71d9975f7960cf125aebd71092e177989a98d39fea6db600f7e9b8ecde564cb6eeb07b240e9a9403ebc956417e6b629777c626a5ab8c79a907cd5006bd
+EBUILD multitail-5.2.12.ebuild 1172 SHA256 b725434a98ce729c7a2064d9356560aa276b7aac823b96c975bd227ac2fc7040 SHA512 76facdb027d8a93b2db886fe01211070f28f77e00755431714abf0343f4223b2390f8542bacac5aa9f853f646180c9866c961c5664376e82720c221782789c70 WHIRLPOOL 26ce784e09a8eba2f5326cb2d9166afab652c64917145df882ca4b675a96b38a78bf35dd2121fa09c4ff1e746f9d8a3edc7139931f7e9cd9201e7a5ae043b201
 EBUILD multitail-5.2.9.ebuild 1207 SHA256 a143dcfbf8d3fb3223a6ee96f8cf5c493ac9cb58341bdc303e1574f0d5bb221b SHA512 8f62b969d2d5add0365b6eb958360fed9cf9f02d1cd17ed778ec65d7f3ab8021433b5f6d600c96ec38ead47c5bb51b519099da00aa82c80eac6126ad93d416d0 WHIRLPOOL 3c8cb16e13e3e6bc60b3bf10198f1d3668040e0b42208276ff9e2c7649c11daefc55c59368e3a8f009e5043298849a685653a3606f93b8d99c57df69adeb58f0
-MISC ChangeLog 11305 SHA256 ae5765489454b5aad603ab3ea227a8b17a5ab683dea5aeba48b76ad95e3ce72d SHA512 914da32c22c4f2a15f0b8cbef4566e2833620422cf98b560f59ef19df7f7e05888af397eb3c18b026bf6802a35822e386a26c20290a3b68ce7a514a0c8125957 WHIRLPOOL 5b80b7d95e367fbb78bbeb1dec96b4f5dfa61fe8c4dd56735cc75cbb18e3c9fb6d3fde88773494beaa993d7574f48d622654e50f108cd364b8aa72877a4b7ddd
+MISC ChangeLog 11427 SHA256 589f00be8cea99128ab2e04cdf25a1e95ebe9da0596dadb7c0aeff0aafcd58a8 SHA512 bc72b7f37170e47df5a0660b7d16e394ac443fb22037dac1ada9f607fd3779eb2248a0e344987de9521640328860b05672af4dc911b7eb0b9e9f35f3f1ac8d77 WHIRLPOOL fcfaf05e9c44fcc6915b8eceac77846cc06e521fc0e124e570c721be11282d57883d1feb575eb8a9c4cbd5f184b0fc25c6211194a5d92b0a5f36a45a48756c0b
 MISC metadata.xml 319 SHA256 becb3d73a94717c596b82746022803d99fe5f8cda1244512c9faa8a7b1c74b66 SHA512 bb561b88d4a4a4e7812eebbaf842cf65d81c7c90fe475793c944ea785715323eb386ce32e8a5759e7580089728b47fe0e1e47b8e05449a781a8a6ec5da2a82bd WHIRLPOOL 12575f9318912d9e8ef1b3bbc91f7d0da0eb3ec2d1ac9126e3981991c691ffacb22b30560a4ea54249f31fb62653efdd0a0b3e6fae828304096d4b1bbca78b91
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlDzr9kACgkQgAnW8HDreRZrTgCgoH8+lhUA6oJWQucngreDqrML
-SxYAnj5p8iGF7s7FaEp1RjCPesJqEcr1
-=DWx9
+iEYEAREIAAYFAlErbJ4ACgkQgAnW8HDreRa+WgCfe0sDEzcEDZ5vGD7Y319LHgAx
+eAYAn1qRw5kB1aS6pOPf60X99uTVXTiz
+=pFpy
 -----END PGP SIGNATURE-----
