@@ -1,6 +1,11 @@
 # ChangeLog for app-text/multitail
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/multitail/ChangeLog,v 1.93 2013/01/14 07:12:27 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/multitail/ChangeLog,v 1.94 2013/02/25 13:52:29 jlec Exp $
+
+*multitail-5.2.12 (25 Feb 2013)
+
+  25 Feb 2013; Justin Lecher <jlec@gentoo.org> +multitail-5.2.12.ebuild:
+  Version Bump
 
 *multitail-5.2.11 (14 Jan 2013)
 
